--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,34 @@
+body {
+  /* display: grid; */
+  /* grid-template-areas: 
+  ".cpu" ".cpu-info"
+  ".player-info" ".board"; */
+}
+
+
 .board {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  margin-left: 20rem;
+  height: 10rem;
+  width: 10rem;
+  align-items: center;
 }
+  .cpu {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    width: 40%;
+    height: 40%;
+    /* opacity: 0%; */
+  }
 
 .node {
   padding: .3rem;
+  border-radius: 50%;
+  margin-top: 1.5rem;
+  margin-left: 1.5rem;
+  width: 40%;
+  background-color: blue;
   }
