--- a/css/main.css
+++ b/css/main.css
@@ -95,6 +95,7 @@ h1 {
   padding: .5rem;
   /* border-radius: 50%; */
   text-align: center;
+  border: 1px solid black;
   margin: .1rem;
   /* margin-left: .5rem; */
   /* width: 50%; */
