--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body {
-  background-color: lightgreen;
+  background-color: rgb(24, 34, 142);
 }
 
 h1 {
@@ -7,14 +7,12 @@ h1 {
   text-align: center;
   padding-left: 25rem;
   padding-right: 25rem;
-  
 }
 
 #ships {
   margin-top: 2.5rem;
   justify-content: center;
   text-align: center;
-
 }
 
 .ship-button {
@@ -55,20 +53,20 @@ h1 {
   top: 0;
   left: 0;
 }
-  
+
 .cpu {
-    justify-content: center;
-    display: none;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    width: 50rem;
-    margin: auto;
-    height: 40%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    color: white;
-    cursor: pointer;
+  justify-content: center;
+  display: none;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  width: 50rem;
+  margin: auto;
+  height: 40%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: white;
+  cursor: pointer;
 }
 
 #swap-turn {
@@ -81,9 +79,9 @@ h1 {
 }
 
 .node {
-  padding: .5rem;
+  padding: 0.5rem;
   text-align: center;
   border: 1px solid black;
-  margin: .1rem;
+  margin: 0.1rem;
   background-color: lightseagreen;
-  }
+}
